--- a/app/_includes/head.html
+++ b/app/_includes/head.html
@@ -3,7 +3,7 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="generator" content="Polymer Starter Kit">
-  <title>Mr Rooke Maths</title>
+  <title>{{title}}</title>
 
   <!-- Place favicon.ico in the `app/` directory -->
 
@@ -44,4 +44,7 @@
 
   <!-- For shared styles, shared-styles.html import in elements.html -->
   <style is="custom-style" include="shared-styles"></style>
+  <script type="text/javascript" async
+  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+</script>   
 </head>
