--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -18,27 +18,27 @@
 
         <!-- Drawer Content -->
         <paper-menu attr-for-selected="data-route" selected="[[route]]">
-          <a data-route="home" href="{{baseUrl}}">
+          <a href="/">
             <iron-icon icon="home"></iron-icon>
             <span>Home</span>
           </a>
 
-          <a data-route="users" href="{{baseUrl}}users">
+          <a href="/blog/">
             <iron-icon icon="description"></iron-icon>
             <span>Weblog</span>
           </a>
 
-          <a data-route="users" href="{{baseUrl}}users">
+          <a href="/resources/">
             <iron-icon icon="folder"></iron-icon>
             <span>Resources</span>
           </a>
 
-          <a data-route="users" href="{{baseUrl}}revision">
+          <a data-route="users" href="/revision/">
             <iron-icon icon="create"></iron-icon>
             <span>Revision</span>
           </a>
 
-          <a data-route="contact" href="{{baseUrl}}about">
+          <a data-route="contact" href="/about/">
             <iron-icon icon="info"></iron-icon>
             <span>About</span>
           </a>
